--- a/public/css/login.css
+++ b/public/css/login.css
@@ -39,8 +39,10 @@ html, body {
 }
 
 .login-form {
-    background-color: #E8EAF6;
+    background-color: #FFF;
     padding: 2% 10%;
+    border-radius: 2px;
+    box-shadow: 0 5px 5px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
 }
 
 .login-container {
